# Py_player

./: .gitignore  Licence.txt  README.md  author.json  main.py  pyproject.toml  todo.md
.github/workflows/: tests.yml
doc/: api-constant-refactor-notes.md  todo.md  todo_ui.md
src/main/python/api/: __init__.py  config.py  constant.py  io_utils.py  playlist.py  playlist_class.py  pyplayer_manager.py  test_api.py  test_atomic_save.py  test_playlist.py  video.py  video_class.py  video_manager.py
src/main/python/ui/: main_window.py
src/main/resources/: output.webm  preferences.json
src/pyplayer/: __init__.py  bootstrap.py
src/pyplayer/app/: __init__.py
src/pyplayer/app/services/: __init__.py  playlist_manager.py  playlist_registry.py
src/pyplayer/domain/: errors.py
src/pyplayer/domain/media/: __init__.py  media_formats.py  video.py
src/pyplayer/domain/playlist/: __init__.py  play_mode.py  playlist.py  playlist_file_service.py  playlist_navigation.py  playlist_state.py  (+2 more)
src/pyplayer/infrastructure/: __init__.py
src/pyplayer/ui/: main_window.py
tests/: test_atomic_save.py  test_legacy_imports.py  test_playlist_domain.py  test_playlist_manager.py  test_ui_smoke.py
tools/benchmarks/: BENCHMARK_RESULTS.md  OPTIMIZATION_PHASE2_RESULTS.md  OPTIMIZATION_PHASE3_RESULTS.md  OPTIMIZATION_PHASE4_RESULTS.md  OPTIMIZATION_PLAN.md  benchmark_first_play.py  benchmark_fonts_icons.py  benchmark_io.py  benchmark_layout.py  benchmark_mainwindow.py  benchmark_playlist.py  benchmark_qtmultimedia.py  benchmark_signals.py  benchmark_startup.py  benchmark_ui_population.py
(+30 files in other folders)
