[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplayer"
version = "0.1.0"
description = "PyPlayer desktop media player built with PySide6"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
]

[project.scripts]
pyplayer = "src.pyplayer.bootstrap:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]
